# MikesToolsLibrary

./: .gitignore  README.md  ZZZZZZZZZZZZZZZversion_utils.py  pyproject.toml  setup.py  t.bat  version.toml  version_utils.py
.github/: copilot-instructions.md
.history/: .gitignore_20251126235109  .gitignore_20251128202845  .gitignore_20251128202851  .gitignore_20251128202854  .gitignore_20251207201447  pyproject_20251128201916.toml  pyproject_20251128201936.toml  pyproject_20251128201939.toml  pyproject_20251128201940.toml  pyproject_20251128201944.toml  pyproject_20251128201955.toml  pyproject_20251128202001.toml  pyproject_20251128202005.toml  pyproject_20251128202006.toml  pyproject_20251128202442.toml  pyproject_20251128203017.toml  pyproject_20251128203018.toml  pyproject_20251201182537.toml  pyproject_20251201182538.toml  pyproject_20251201182540.toml  pyproject_20251201182542.toml  pyproject_20251201182544.toml  pyproject_20251201182614.toml  pyproject_20251201182616.toml  pyproject_20251201182652.toml  pyproject_20251201182653.toml  pyproject_20251201182733.toml  pyproject_20251201182936.toml  pyproject_20251201183013.toml  pyproject_20251201183014.toml  pyproject_20251201183019.toml  pyproject_20251201183022.toml  pyproject_20251201183025.toml  pyproject_20251201183229.toml  pyproject_20251201183233.toml  pyproject_20251201183252.toml  pyproject_20251201183339.toml  pyproject_20251207200146.toml  pyproject_20251207200147.toml  pyproject_20251207200225.toml  (+73 more)
examples/: basic_setup.py  encryptionExample.py  errorHandlerExample.py  loggerExample.py  (+4 more)
(+3487 files in other folders)
